# bazel-example-data-label-list-runfiles

./: BUILD.bazel  MODULE.bazel  README.md  can_i_find.bzl
.github/: renovate.json
.github/workflows/: bazel.yaml
check/: BUILD.bazel
some_data/: dog.yaml
