module(
    name = "bazel-example-data-label-list-runfiles",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# bazel run @buildifier_prebuilt//:buildifier -- -v -r $(pwd)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)
